# daosearch

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.local.yml
reader/: .dockerignore  Dockerfile  config.py  db.py  main.py  pyproject.toml  schemas.py
reader/routers/: entities.py  health.py  scraper.py  search.py  translate.py
reader/scraper/: base.py  proxy.py  search.py  translate.py
reader/scraper/sites/: __init__.py  bixiange.py  bookqq.py  ffxs8.py  ixdzs.py  mokakanshu.py  novel543.py  shuba69.py  shuba69tw.py  shuhaige.py  trxs.py  twkan.py  (+1 more)
reader/searxng/: settings.yml
reader/translation/: entities.py  llm_client.py  pipeline.py
scraper/: .dockerignore  Dockerfile  entrypoint.sh  main.py  pyproject.toml  worker_pool.py
scraper/alembic/: env.py
scraper/core/: __init__.py  config.py  database.py  models.py  redis_conn.py
scraper/scripts/: check_queue.py  purge_queues.py  schedule_missing_fields.py  schedule_scrapes.py
scraper/services/: auto_scheduler.py  book_matcher.py  dead_books.py  google_translate.py  openai_client.py  proxy_manager.py  qidian_cookie.py  queue_manager.py
scraper/spiders/: booklist_scraper.py  discovery.py
scraper/tests/: __init__.py  smoke_qidian_mapping.py  staging_tests.py  test_book_matcher.py  test_minter_constants.py  test_qidian_charts.py  test_qidian_cookie.py  test_qidian_mapper_logic.py
scraper/workers/: charts_scraper.py  maintenance.py  qidian_charts_scraper.py  qidian_detail_scraper.py  qidian_mapper.py  scraper.py  stats.py  translator.py
(+346 files in other folders)
