[project]
name = "daosearch-reader"
version = "0.1.0"
description = "Real-time chapter scraping and translation service for DaoSearch"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.13.0",
    "lxml>=5.3.0",
    "cssselect>=1.2.0",
    "redis>=6.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[tool.uv]
dev-dependencies = []
